# Frontier

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  environment.yml  environment_profiling.yml  pyproject.toml
docs/cli/: README.md
docs/profiling/: README.md
docs/roadmap/: README.md
docs/training/: README.md
examples/: README.md
examples/architecture/: README.md  run_dummy_smoke_matrix.sh
examples/fixtures/: prefix_cache_shared_session_trace.csv
examples/profiling/: README.md  profile_attention_chunked_prefill.sh  profile_linear_op.sh  profile_moe.sh  smoke_metadata.sh  smoke_simulator_dense_csv.sh  smoke_simulator_moe_csv.sh
frontier/: cluster_simulator.py  errors.py  logger.py  main.py  model_architectures.py  moe_gating_runtime.py  moe_routing_runtime.py  simulator.py
frontier/attention/: __init__.py  families.py  memory.py  model_binding.py  ops.py  profiling_mapping.py  string_coercion.py  trace_mapping.py
frontier/cc_backend/: __init__.py  base_cc_backend.py  cc_backend_config.py  cc_backend_factory.py
frontier/config/: __init__.py  base_fixed_config.py  base_poly_config.py  config.py  device_sku_config.py  flat_dataclass.py  global_vars.py  kv_cache_transfer_config.py  m2n_transfer_config.py  model_config.py  node_sku_config.py  parallel_semantics.py  precision_type.py  quantization_manager.py  utils.py
frontier/entities/: __init__.py  batch.py  batch_stage.py  cluster.py  execution_time.py  kv_cache_transfer_info.py  m2n_transfer_info.py  replica.py  request.py  time_components.py
frontier/events/: __init__.py  base_event.py  (+20 more)
(+572 files in other folders)
